--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,15 @@
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --bg-primaryColor: #EAEAEA;
+  --bg-secondaryColor: #2D2C2C;
+
+  --font-primaryColor: #000000;
+  
+  --font-nameType: "Aldrich";
+  --font-iconParagraphType: "Poppins";
+  --font-titleType: "Noto_Serif";
+
+  --svg-color: #2D2C2C;
+  --icon-color: #2D2C2C;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -30,10 +39,6 @@ body {
   margin: 0;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
 
 @media (prefers-color-scheme: dark) {
   html {
