iniciando pagina projetos

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   --font-nameType: "Aldrich";
   --font-iconParagraphType: "Poppins";
   --font-titleType: "Noto_Serif";
+  --font-StacksType: "Quantico";
 
   --bg-hover: rgba(225,225,225,0.4);
 
