--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -6,20 +6,23 @@
     flex-direction: row;
 
     .main{
-        padding: 32px;
+        padding: 40px;
 
         display: flex;
         flex-direction: column;
-        align-items: center; 
+        align-items: center;
+        gap: 64px; 
 
         .section{
-            width: 50%;
+            width: 60%;
 
             display: flex;
             flex-direction: row;
             gap: 32px;
 
             .text{
+                padding: 32px 0;
+
                 display: flex;
                 flex-direction: column;
                 gap: 24px;
@@ -36,11 +39,31 @@
         }
 
         .stacksSection{
-            width: 50%;
+            width: 60%;
 
             display: flex;
             flex-direction: column;
             gap: 32px;
+
+            .title{
+                font-size: 40px;
+                font-family: var(--font-titleType);
+                
+                margin-bottom: 24px;
+            }
+
+            .divStacks{
+                width: 100%;
+
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                gap: 32px;
+            }
+        }
+
+        .aboutMeDiv{
+            width: 60%;
         }
     }
 }
