--- a/components/Project/project.module.css
+++ b/components/Project/project.module.css
@@ -1,3 +1,10 @@
+.title{
+    font-size: 40px;
+    font-family: var(--font-titleType);
+
+    margin-bottom: 12px;
+}
+
 .children{
     display: flex;
     flex-direction: row;
