--- a/app/globals.css
+++ b/app/globals.css
@@ -11,6 +11,8 @@
   --font-StacksType: "Quantico";
 
   --bg-hover: rgba(225,225,225,0.4);
+  --bg-secondaryHover: rgba(161, 161, 161, 0.4);
+
 
   --checkedColor: #7087C3;
 
