--- a/components/Header/NavBar/navbar.module.css
+++ b/components/Header/NavBar/navbar.module.css
@@ -34,5 +34,12 @@
             width: 3px;
             height: 100%;
         }
+
+        .noChecked{
+            width: 3px;
+            height: 100%;
+
+            opacity: 0.9;
+        }
     }
 }
