--- a/app/projects/page.module.css
+++ b/app/projects/page.module.css
@@ -19,6 +19,48 @@
 
     .section{
       width: 60%;
+
+      .projectImage{
+        border-radius: 24px;
+        height: auto;
+      }
+    }
+
+      .sectionProjects{
+
+        .title{
+          margin-bottom: 8px;
+        }
+
+        .paragraph{
+          margin-bottom: 24px;
+        }
+    
+      .divRepos{
+        margin-bottom: 12px;
+
+        display: flex;
+        justify-content: space-between;
+
+        transition: all .5s ease;
+
+        h1{
+          font-size: 27px;
+          font-family: var(--font-titleType);
+        }
+
+        &:hover{
+          background-color: var(--bg-secondaryHover);
+          border-radius: 8px;
+          
+          height: 50px;
+
+          padding: 8px;
+
+          align-items: center;
+          transform: scale(1.02);
+        }
+      }
     }
 
   }
