--- a/components/Stacks/stacks.module.css
+++ b/components/Stacks/stacks.module.css
@@ -7,6 +7,7 @@
     align-items: center;
 
     h1{
+        color: var(--bg-secondaryColor);
         font-family: var(--font-StacksType);
         font-size: 28px;
     }
