--- a/components/Project/project.module.css
+++ b/components/Project/project.module.css
@@ -1,6 +1,6 @@
 .title{
     font-size: 40px;
-    font-family: var(--font-titleType);
+    font-family: var(--font-nameType);
 
     margin-bottom: 12px;
 }
