--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -26,7 +26,7 @@
 
                 h1{
                     font-size: 40px;
-                    font-family: var(--font-titleType);
+                    font-family: var(--font-nameType);
                 }
 
                 p{
@@ -44,7 +44,7 @@
 
             .title{
                 font-size: 40px;
-                font-family: var(--font-titleType);
+                font-family: var(--font-nameType);
                 
                 margin-bottom: 24px;
             }
