--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,4 +1,32 @@
 .divContain{
   height: 100vh;
   width: 100vw;
+
+   .main{
+      padding: 40px;
+
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 64px; 
+
+      .section{
+        width: 60%;
+
+        display: flex;
+        flex-direction: column;
+
+        .title{
+          font-family: var(--font-nameType);
+          font-size: 2rem;
+        }
+
+        .subTitle{
+          font-size: 16px;
+          font-weight: 300;
+
+          margin-bottom: 24px;
+        }
+      }
+  }
 }
