--- a/app/game/page.module.css
+++ b/app/game/page.module.css
@@ -64,11 +64,19 @@
     }
 
     .sectionInput{
+
       margin-bottom: 16px;
 
       display: flex;
       flex-direction: column;
       gap: 16px;
+
+      .input{
+        height: 30px;
+
+        border: 1px solid black;
+        border-radius: 6px;
+      }
       
       .divButtons{
         display: flex;
