--- a/components/CodeDescription/codeDescription.module.css
+++ b/components/CodeDescription/codeDescription.module.css
@@ -9,3 +9,11 @@
         width: 50%;
     }
 }
+
+@media screen and (max-width: 600px){
+    .divContain{ 
+        .image{
+            width: 90%;
+        }
+    }
+}
