--- a/app/about/page.module.css
+++ b/app/about/page.module.css
@@ -64,3 +64,29 @@
         }
     }
 }
+
+@media screen and (max-width: 600px) {
+    .main{
+        .section{
+            .img{
+                display: none;
+            }
+        }
+
+        .imageStacks{
+            display: none;
+        }
+    }
+}
+
+@media screen and (min-width:601px) and (max-width:900px){
+    .main{
+        .section{
+            align-items: center;
+        }
+
+        .imageStacks{
+            display: none;
+        }
+    }
+}
