--- a/components/Project/project.module.css
+++ b/components/Project/project.module.css
@@ -5,9 +5,24 @@
     margin-bottom: 12px;
 }
 
-.children{
+.childrenDiv{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     gap: 24px;
+}
+
+@media screen and (max-width: 600px) {
+    .childrenDiv{
+        display: flex;
+        flex-direction: column;
+    }
+    
+}
+
+@media screen and (min-width:601px) and (max-width:900px){
+    .childrenDiv{
+        display: flex;
+        flex-direction: column;
+    }
 }
