--- a/components/ProjectContain/projectContain.module.css
+++ b/components/ProjectContain/projectContain.module.css
@@ -12,3 +12,11 @@
         padding: 8px 16px;
     }
 }
+
+@media screen and (min-width: 601px) and (max-width: 900px) {
+    .contain{
+        &:hover{
+            width: 140%;
+        }
+    }
+}
