--- a/components/StacksDiv/stacksDiv.module.css
+++ b/components/StacksDiv/stacksDiv.module.css
@@ -5,3 +5,9 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 40px;
 }
+
+@media screen and (max-width: 600px) {
+    .stacksDiv{
+        grid-template-columns: 1fr 1fr;
+    }
+}
